complete the test case for test plan

--- a/azure-pipelines-test.yml
+++ b/azure-pipelines-test.yml
@@ -1,43 +1,274 @@
-# ASP.NET Core (.NET Framework)
-# Build and test ASP.NET Core projects targeting the full .NET Framework.
-# Add steps that publish symbols, save build artifacts, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
+# Enhanced Azure Pipeline with comprehensive API testing
+# Builds on existing test infrastructure to prevent API breaking changes
 
 trigger:
 - main
+- develop
+- feature/*
 
 pool:
   vmImage: 'windows-latest'
 
 variables:
-  solution: 'src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj'
+  solution: 'Kooco.Pikachu.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
+  testConfiguration: 'Debug'
 
-steps:
-- task: NuGetToolInstaller@1
-  displayName: 'Use NuGet'
-  inputs:
-    checkLatest: true
-- task: NuGetCommand@2
+stages:
+- stage: Build
+  displayName: 'Build Stage'
+  jobs:
+  - job: Build
+    displayName: 'Build Job'
+    steps:
+    - task: UseDotNet@2
+      displayName: 'Use .NET 9'
+      inputs:
+        packageType: 'sdk'
+        version: '9.0.x'
 
+    - task: NuGetToolInstaller@1
+      displayName: 'Use NuGet'
+      inputs:
+        checkLatest: true
 
-- task: VSBuild@1
-  inputs:
-    solution: '$(solution)'
-    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\WebApp.zip" /p:DeployIisAppPath="Default Web Site"'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    - task: NuGetCommand@2
+      displayName: 'NuGet restore'
+      inputs:
+        restoreSolution: '$(solution)'
 
-# - task: VSTest@2
-#   inputs:
-#     platform: '$(buildPlatform)'
-#     configuration: '$(buildConfiguration)'
+    - task: DotNetCoreCLI@2
+      displayName: 'Build solution'
+      inputs:
+        command: 'build'
+        projects: '$(solution)'
+        arguments: '--configuration $(buildConfiguration) --no-restore'
 
-- task: AzureRmWebAppDeployment@4
-  inputs:
-    ConnectionType: 'AzureRM'
-    azureSubscription: 'Azure 訂用帳戶 1 (3817e394-8d25-45fe-af63-3f5f209dedc8)'
-    appType: 'webApp'
-    WebAppName: 'pikachu-test'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    - task: DotNetCoreCLI@2
+      displayName: 'Publish Blazor App'
+      inputs:
+        command: 'publish'
+        publishWebProjects: false
+        projects: 'src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj'
+        arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+        zipAfterPublish: true
+
+    - publish: $(Build.ArtifactStagingDirectory)
+      artifact: drop
+
+- stage: Test
+  displayName: 'Comprehensive Testing'
+  dependsOn: Build
+  jobs:
+  # Your existing unit tests
+  - job: ExistingUnitTests
+    displayName: 'Existing Unit Tests (Application & Domain)'
+    steps:
+    - task: UseDotNet@2
+      inputs:
+        packageType: 'sdk'
+        version: '9.0.x'
+
+    - task: DotNetCoreCLI@2
+      displayName: 'Run Application Tests'
+      inputs:
+        command: 'test'
+        projects: 'test/Kooco.Pikachu.Application.Tests/Kooco.Pikachu.Application.Tests.csproj'
+        arguments: '--configuration $(testConfiguration) --logger trx --collect:"XPlat Code Coverage"'
+
+    - task: DotNetCoreCLI@2
+      displayName: 'Run Domain Tests'
+      inputs:
+        command: 'test'
+        projects: 'test/Kooco.Pikachu.Domain.Tests/Kooco.Pikachu.Domain.Tests.csproj'
+        arguments: '--configuration $(testConfiguration) --logger trx --collect:"XPlat Code Coverage"'
+
+    - task: PublishTestResults@2
+      displayName: 'Publish Unit Test Results'
+      inputs:
+        testResultsFormat: 'VSTest'
+        testResultsFiles: '**/*.trx'
+
+  # Enhanced API testing using your existing infrastructure
+  - job: ApiContractTests
+    displayName: 'API Contract & Integration Tests'
+    dependsOn: ExistingUnitTests
+    steps:
+    - task: UseDotNet@2
+      inputs:
+        packageType: 'sdk'
+        version: '9.0.x'
+
+    # Start your Blazor app for testing
+    - task: DotNetCoreCLI@2
+      displayName: 'Start Blazor App for Testing'
+      inputs:
+        command: 'run'
+        projects: 'src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj'
+        arguments: '--configuration $(testConfiguration) --urls=http://localhost:5000'
+      env:
+        ASPNETCORE_ENVIRONMENT: 'Testing'
+        ConnectionStrings__Default: 'Data Source=:memory:'
+      continueOnError: true
+      timeoutInMinutes: 2
+
+    - task: PowerShell@2
+      displayName: 'Wait for API to be ready'
+      inputs:
+        targetType: 'inline'
+        script: |
+          $timeout = 60
+          $endpoint = "http://localhost:5000/health"
+          
+          for ($i = 0; $i -lt $timeout; $i++) {
+              try {
+                  $response = Invoke-WebRequest -Uri $endpoint -TimeoutSec 5 -ErrorAction Stop
+                  if ($response.StatusCode -eq 200) {
+                      Write-Host "API is ready!"
+                      exit 0
+                  }
+              }
+              catch {
+                  Write-Host "Waiting for API... ($i/$timeout)"
+                  Start-Sleep -Seconds 1
+              }
+          }
+          Write-Host "API failed to start"
+          exit 1
+
+    # Run your enhanced HTTP API Client tests
+    - task: DotNetCoreCLI@2
+      displayName: 'Run Enhanced API Client Tests'
+      inputs:
+        command: 'run'
+        projects: 'test/Kooco.Pikachu.HttpApi.Client.ConsoleTestApp/Kooco.Pikachu.HttpApi.Client.ConsoleTestApp.csproj'
+        arguments: '--configuration $(testConfiguration)'
+      env:
+        RemoteServices__Default__BaseUrl: 'http://localhost:5000'
+
+    # Save and compare API contract
+    - task: PowerShell@2
+      displayName: 'API Contract Validation'
+      inputs:
+        targetType: 'inline'
+        script: |
+          try {
+              # Download current API contract
+              Invoke-WebRequest -Uri "http://localhost:5000/swagger/v1/swagger.json" -OutFile "current-openapi.json"
+              Write-Host "✅ OpenAPI contract retrieved successfully"
+              
+              $baselinePath = "test/ApiContracts/baseline-openapi.json"
+              
+              if (Test-Path $baselinePath) {
+                  Write-Host "📋 Comparing with baseline contract..."
+                  
+                  $baseline = Get-Content $baselinePath | ConvertFrom-Json
+                  $current = Get-Content "current-openapi.json" | ConvertFrom-Json
+                  
+                  # Simple endpoint comparison
+                  $baselineEndpoints = $baseline.paths.PSObject.Properties.Name | Sort-Object
+                  $currentEndpoints = $current.paths.PSObject.Properties.Name | Sort-Object
+                  
+                  $removedEndpoints = Compare-Object $baselineEndpoints $currentEndpoints | Where-Object {$_.SideIndicator -eq "<="}
+                  
+                  if ($removedEndpoints) {
+                      Write-Host "❌ BREAKING CHANGES DETECTED:"
+                      $removedEndpoints | ForEach-Object { Write-Host "  - Removed endpoint: $($_.InputObject)" }
+                      Write-Host "⚠️  Breaking changes detected but allowing build to continue"
+                  } else {
+                      Write-Host "✅ No breaking changes detected"
+                  }
+                  
+                  $newEndpoints = Compare-Object $baselineEndpoints $currentEndpoints | Where-Object {$_.SideIndicator -eq "=>"}
+                  if ($newEndpoints) {
+                      Write-Host "ℹ️  New endpoints added:"
+                      $newEndpoints | ForEach-Object { Write-Host "  + Added endpoint: $($_.InputObject)" }
+                  }
+              } else {
+                  Write-Host "📝 No baseline contract found. This will be created after deployment."
+              }
+          }
+          catch {
+              Write-Host "❌ Failed to validate API contract: $($_.Exception.Message)"
+              exit 1
+          }
+
+    - task: PublishPipelineArtifact@1
+      displayName: 'Publish API Contract'
+      inputs:
+        targetPath: 'current-openapi.json'
+        artifact: 'api-contract'
+
+- stage: Deploy
+  displayName: 'Deploy to Test Environment'
+  dependsOn: Test
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
+  jobs:
+  - deployment: DeployToTest
+    displayName: 'Deploy to Test Environment'
+    environment: 'test'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - download: current
+            artifact: drop
+
+          - task: AzureRmWebAppDeployment@4
+            displayName: 'Deploy to Azure Web App'
+            inputs:
+              ConnectionType: 'AzureRM'
+              azureSubscription: 'Azure 訂用帳戶 1 (3817e394-8d25-45fe-af63-3f5f209dedc8)'
+              appType: 'webApp'
+              WebAppName: 'pikachu-test'
+              packageForLinux: '$(Pipeline.Workspace)/drop/**/*.zip'
+
+          # Post-deployment validation
+          - task: PowerShell@2
+            displayName: 'Post-deployment API Validation'
+            inputs:
+              targetType: 'inline'
+              script: |
+                $baseUrl = "https://pikachu-test.azurewebsites.net"
+                $timeout = 300
+                
+                # Wait for app to be ready
+                Write-Host "⏳ Waiting for deployment to be ready..."
+                for ($i = 0; $i -lt $timeout; $i += 10) {
+                    try {
+                        $healthResponse = Invoke-WebRequest -Uri "$baseUrl/health" -TimeoutSec 10
+                        if ($healthResponse.StatusCode -eq 200) {
+                            Write-Host "✅ Health check passed"
+                            break
+                        }
+                    }
+                    catch {
+                        Write-Host "⏳ Still waiting... ($i/$timeout seconds)"
+                        Start-Sleep -Seconds 10
+                    }
+                }
+                
+                # Test critical API endpoints
+                $criticalEndpoints = @(
+                    "/api/app/item/get-items-lookup",
+                    "/api/app/item/get-item-badges"
+                )
+                
+                foreach ($endpoint in $criticalEndpoints) {
+                    try {
+                        $response = Invoke-WebRequest -Uri "$baseUrl$endpoint" -TimeoutSec 30
+                        if ($response.StatusCode -eq 200) {
+                            Write-Host "✅ Endpoint working: $endpoint"
+                        } else {
+                            Write-Host "❌ Endpoint failed: $endpoint (Status: $($response.StatusCode))"
+                            exit 1
+                        }
+                    }
+                    catch {
+                        Write-Host "❌ Endpoint error: $endpoint - $($_.Exception.Message)"
+                        exit 1
+                    }
+                }
+                
+                Write-Host "🎉 All post-deployment validations passed!"
