--- a/test/Kooco.Pikachu.HttpApi.Client.ConsoleTestApp/Kooco.Pikachu.HttpApi.Client.ConsoleTestApp.csproj
+++ b/test/Kooco.Pikachu.HttpApi.Client.ConsoleTestApp/Kooco.Pikachu.HttpApi.Client.ConsoleTestApp.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <PackageReference Include="Volo.Abp.Http.Client.IdentityModel" Version="9.0.4" />
     <PackageReference Include="Volo.Abp.Autofac" Version="9.0.4" />
+    <PackageReference Include="Microsoft.OpenApi.Readers" Version="1.6.14" />
     <ProjectReference Include="..\..\src\Kooco.Pikachu.HttpApi.Client\Kooco.Pikachu.HttpApi.Client.csproj" />
   </ItemGroup>
 
