--- a/src/Kooco.Pikachu.Application/Kooco.Pikachu.Application.csproj
+++ b/src/Kooco.Pikachu.Application/Kooco.Pikachu.Application.csproj
@@ -39,6 +39,7 @@
 	  <PackageReference Include="RestSharp" Version="112.1.0" />
 	  <PackageReference Include="SSH.NET" Version="2025.0.0" />
     <PackageReference Include="Volo.Abp.Account.Application" Version="9.0.4" />
+    <PackageReference Include="Volo.Abp.AspNetCore.SignalR" Version="9.0.4" />
     <PackageReference Include="Volo.Abp.BackgroundJobs.HangFire" Version="9.0.4" />
     <PackageReference Include="Volo.Abp.FluentValidation" Version="9.0.4" />
     <PackageReference Include="Volo.Abp.Identity.Application" Version="9.0.4" />
