--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -4,7 +4,8 @@
     "RedirectAllowedUrls": "https://pikachu-dev.azurewebsites.net",
     "SelfUrl": "https://pikachu-dev.azurewebsites.net",
     "EmailQuotaExceededNotifyUrl": "https://n8nhook.kooco.co/webhook/cf26d9e0-844c-4fb0-a75f-8630c93f5d1c",
-    "GroupBuyReportUrl": "https://groupbuy-report-dev.ibosshops.com/"
+    "GroupBuyReportUrl": "https://groupbuy-report-dev.ibosshops.com/",
+    "Environment":"Development"
   },
 
   "ConnectionStrings": {
