--- a/common.props
+++ b/common.props
@@ -24,8 +24,7 @@
     <TreatWarningsAsErrors Condition="'$(CI)' == 'true'">true</TreatWarningsAsErrors>
     <TreatWarningsAsErrors Condition="'$(CI)' != 'true'">false</TreatWarningsAsErrors>
     <!-- Configure API analyzer rules -->
-    <!-- Temporarily disabled until missing APIs are added -->
-    <!-- <WarningsAsErrors Condition="'$(CI)' == 'true'">RS0016;RS0017</WarningsAsErrors> -->
+    <WarningsAsErrors Condition="'$(CI)' == 'true'">RS0016;RS0017</WarningsAsErrors>
     <WarningsNotAsErrors Condition="'$(CI)' != 'true'">RS0016;RS0017;RS0022;RS0024;RS0025;RS0026;RS0027</WarningsNotAsErrors>
   </PropertyGroup>
 
