--- a/src/Kooco.Pikachu.Domain/Kooco.Pikachu.Domain.csproj
+++ b/src/Kooco.Pikachu.Domain/Kooco.Pikachu.Domain.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="8.0.3" />
     <PackageReference Include="Humanizer.Core" Version="2.14.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Volo.Abp.BlobStoring" Version="9.0.4" />
