--- a/lib/Kooco.ECPay/Kooco.ECPay.csproj
+++ b/lib/Kooco.ECPay/Kooco.ECPay.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.1.0" />
+    <PackageReference Include="RestSharp" Version="112.1.0" />
     <PackageReference Include="Volo.Abp.Http.Client" Version="9.0.4" />
   </ItemGroup>
 
