--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -49,8 +49,8 @@
     "PrintTradeDocument": "https://logistics-stage.ecpay.com.tw/helper/printTradeDocument",
     "PrintUniMartC2COrderInfo": "https://logistics-stage.ecpay.com.tw/Express/PrintUniMartC2COrderInfo",
     "PrintFAMIC2COrderInfo": "https://logistics-stage.ecpay.com.tw/Express/PrintFAMIC2COrderInfo",
-    "QueryLogisticsTradeInfo": "https://logistics-stage.ecpay.com.tw/Helper/QueryLogisticsTradeInfo/V3"
-
+    "QueryLogisticsTradeInfo": "https://logistics-stage.ecpay.com.tw/Helper/QueryLogisticsTradeInfo/V3",
+    "QueryMediaFileUrl": "https://vendor.ecpay.com.tw/PaymentMedia/TradeNoAio"
   },
   "T-Cat": {
     "PrintOBT": "https://egs.suda.com.tw:8443/api/Egs/PrintOBT",
