--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -50,7 +50,8 @@
     "PrintUniMartC2COrderInfo": "https://logistics-stage.ecpay.com.tw/Express/PrintUniMartC2COrderInfo",
     "PrintFAMIC2COrderInfo": "https://logistics-stage.ecpay.com.tw/Express/PrintFAMIC2COrderInfo",
     "QueryLogisticsTradeInfo": "https://logistics-stage.ecpay.com.tw/Helper/QueryLogisticsTradeInfo/V3",
-    "QueryMediaFileUrl": "https://vendor.ecpay.com.tw/PaymentMedia/TradeNoAio"
+    "QueryMediaFileUrl": "https://vendor.ecpay.com.tw/PaymentMedia/TradeNoAio",
+    "QueryTradeInfo": "https://logistics.ecpay.com.tw/Helper/QueryLogisticsTradeInfo/V5"
   },
   "T-Cat": {
     "PrintOBT": "https://egs.suda.com.tw:8443/api/Egs/PrintOBT",
