#PK-1784 EcPay COD Logistics Query

--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -32,10 +32,9 @@
   },
   "EntryUrl": "https://groupbuy-dev.ibosshops.com/",
   "EcPay": {
-
-    "HashKey": "MqPualB34qDhv6wO",
-    "HashIV": "9oZiHmM977DkgLrl",
-    "MerchantID": "3252187",
+    "HashKey": "jxrMfff0dQml5Zhn",
+    "HashIV": "jggHhdCBky7tPFk6",
+    "MerchantID": "3087335",
 
     "E-MAPApi": "https://logistics-stage.ecpay.com.tw/Home/Family",
     "LogisticApi": "https://logistics-stage.ecpay.com.tw/Express/Create",
@@ -51,7 +50,7 @@
     "PrintFAMIC2COrderInfo": "https://logistics-stage.ecpay.com.tw/Express/PrintFAMIC2COrderInfo",
     "QueryLogisticsTradeInfo": "https://logistics-stage.ecpay.com.tw/Helper/QueryLogisticsTradeInfo/V3",
     "QueryMediaFileUrl": "https://vendor.ecpay.com.tw/PaymentMedia/TradeNoAio",
-    "QueryTradeInfo": "https://logistics.ecpay.com.tw/Helper/QueryLogisticsTradeInfo/V5"
+    "CodQueryTradeInfoUrl": "https://logistics.ecpay.com.tw/Helper/QueryLogisticsTradeInfo/V5"
   },
   "T-Cat": {
     "PrintOBT": "https://egs.suda.com.tw:8443/api/Egs/PrintOBT",
