#PK-1927 Take max for handling fee from api and calculated

--- a/src/Kooco.Pikachu.Blazor/appsettings.Development.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.Development.json
@@ -31,9 +31,9 @@
   "EntryUrl": "https://groupbuy-dev.ibosshops.com/",
   "EcPay": {
 
-    "HashKey": "MqPualB34qDhv6wO",
-    "HashIV": "9oZiHmM977DkgLrl",
-    "MerchantID": "3252187",
+    "HashKey": "jxrMfff0dQml5Zhn",
+    "HashIV": "jggHhdCBky7tPFk6",
+    "MerchantID": "3087335",
 
     "E-MAPApi": "https://logistics-stage.ecpay.com.tw/Home/Family",
     "LogisticApi": "https://logistics-stage.ecpay.com.tw/Express/Create",
